# monitorets

./: .gitignore  CONTRIBUTING.md  Makefile  Pipfile  README.md  com.github.jorchube.monitorets.json  io.github.jorchube.monitorets.json  meson.build  org.github.jorchube.gpumonitor.json  pypi-dependencies.json  requirements.txt  update_po_files.sh
po/: de.po  (+12 more)
src/: colors.py  controller.py  discover_temperature_monitors.py  event_broker.py  events.py  gpumonitor.gresource.xml  gpumonitor.in  graph_area.py  headerbar_wrapper.py  layout.py  main.py  meson.build  monitor_descriptors.py  monitor_redraw_frequency_seconds_values.py  monitor_type.py  monitorets.gresource.xml  monitorets.in  network_monitor_scale_manager.py  preference_keys.py  preferences.py  sampler.py  temperature.py  theme.py  theming.py  translators.py  units.py  window.py  window.ui  window_geometry.py
src/cli/: cli_entrypoint.py
src/gtk/: main-menu-model.ui  main-menu-model.xml  main-window.ui  popover-menu.ui  preferences-box.ui  preferences-page-appearance.ui  preferences-page-monitors.ui  preferences-window.ui  rename-monitor-popover.ui  single-window.ui  tips-window.ui  ui.cmb
src/gtk/icons/: layout_toggle_icons.xcf  theme_toggle_icons.xcf
src/monitor_windows/: cpu_monitor_window.py  gpu_monitor_window.py  memory_monitor_window.py  monitor_window.py
src/monitors/: cpu_monitor.py  cpu_per_core_monitor.py  cpu_pressure_monitor.py  downlink_monitor.py  gpu_monitor.py  home_usage_monitor.py  io_pressure_monitor.py  memory_monitor.py  memory_pressure_monitor.py  monitor.py  root_usage_monitor.py  swap_monitor.py  temperature_monitor.py  uplink_monitor.py
src/samplers/: cpu_per_core_sampler.py  cpu_pressure_sampler.py  cpu_sampler.py  delta_sampler.py  disk_usage_sampler.py  downlink_sampler.py  gpu_sampler.py  io_pressure_sampler.py  memory_pressure_sampler.py  memory_sampler.py  pressure_sampler.py  sample.py  sampler.py  swap_sampler.py  temperature_sensor_sampler.py  uplink_sampler.py
src/temperature_sensors/: temperature_sensor_descriptor.py
src/tests/: conftest.py  test_delta_sampler.py  test_event_broker.py  test_monitor.py  test_preferences.py  test_pressure_sampler.py  test_sampler.py  test_text_file_sampler.py
src/translatable_strings/: headerbar.py  monitor_title.py  preference_toggle_description.py  preference_toggle_label.py  preference_toggle_section_name.py  redraw_frequency.py  tips.py
src/ui/: bidirectional_clamp_container_widget.py  colors.py  cpu_monitor_widget.py  gpu_monitor_widget.py  gradient_graph_area.py  graph_area.py  graph_monitor_widget.py  graph_redraw_tick_manager.py  headerbar_wrapper.py  home_usage_monitor_widget.py  layout_toggle_manager.py  memory_monitor_widget.py  monitor_enable_switch.py  monitor_title_overlay.py  monitor_widget.py  overlapping_graphs_area.py  popover_menu.py  preference_switch.py  preferences.py  preferences_box.py  relative_graph_area.py  root_usage_monitor_widget.py  single_window.py  theme_toggle_manager.py  tips_window.py  window.py  window_layour_manager.py  window_layout_manager.py
src/ui/monitor_widgets/: cpu_monitor_widget.py  cpu_per_core_monitor_widget.py  cpu_pressure_monitor_widget.py  downlink_monitor_widget.py  gpu_monitor_widget.py  gradient_monitor_widget.py  home_usage_monitor_widget.py  io_pressure_monitor_widget.py  memory_monitor_widget.py  memory_pressure_monitor_widget.py  monitor_widget.py  overlapping_values_monitor_widget.py  relative_monitor_widget.py  root_usage_monitor_widget.py  swap_monitor_widget.py  temperature_sensor_monitor_widget.py  (+1 more)
(+26 files in other folders)
